# refractiveindexinfo-python

./: README.md  material_handler.py  pyproject.toml  shell.nix
.github/workflows/: pypi.yml  python-formatter.yml  testing.yml
refidxpy/: formulas.py  refidx.py
tests/: ideas.txt  test_init.py
